[project]
name = "mysterious-api"
version = "0.1.0"
description = "Mysterious 分布式压测平台后端 (Python/FastAPI 重构版)"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncmy>=0.2.9",
    "redis[hiredis]>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.9",
    "orjson>=3.10.0",
    "aiofiles>=24.0.0",
    "lxml>=5.0.0",
    "paramiko>=3.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "real_ssh: 标记测试需要使用真实 SSHClient（绕过 conftest.mock_ssh autouse fixture）",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
